<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Medicines</string>
    <string name="title_medicine_detail">Medicine Detail</string>
    <string name="validity">Validity</string>
    <string name="separator">/</string>
    <string name="drug">Drug</string>
    <string name="name">Name</string>
    <string name="laboratory">Laboratory</string>
    <string name="barcode">Barcode</string>
    <string name="hint_medicine_name">Medicine Name</string>
    <string name="add_medicine">Add Medicine</string>
    <string name="del_medicine">Remove Medicine</string>
    <string name="save">Save medicine</string>
    <string name="action_barcode">Read Barcode</string>
    <string name="form">Form</string>
    <string name="hint_form">Pill</string>
    <string name="concentration">Concentration</string>
    <string name="saving">Saving new medicine....</string>
    <string name="finding">Finding medicine....</string>
    <string name="notfoundindb">Not found in database</string>
    <string name="foundindb">Found in database</string>
    <string name="title_alert_barcodescanner">Barcode Scanner</string>
    <string name="body_alert_barcodescanner">You don\'t have any barcode scanner. Do you want to install it now ?</string>
    <string name="alert_title_medicine">Medicine are incomplete</string>
    <string name="alert_body_medicine">You need to fill at last Brand Name and Validity Date</string>
    <string name="image_list_description">Medicine Image</string>

    <string-array name="forms_array">
        <item>Oral</item>
        <item>Pill</item>
        <item>Tablet</item>
        <item>Capsule</item>
        <item>Thin film</item>
        <item>Liquid solution</item>
        <item>Suspension</item>
        <item>Seed</item>
        <item>Aerosol</item>
        <item>Inhaler</item>
        <item>Nebulizer</item>
        <item>Intradermal</item>
        <item>Intramuscular</item>
        <item>Intraosseous</item>
        <item>Intraperitoneal</item>
        <item>Intravenous</item>
        <item>Subcutaneous</item>
        <item>Intrathecal</item>
        <item>Cream</item>
        <item>Gel</item>
        <item>Liniment</item>
        <item>Balm</item>
        <item>Lotion</item>
        <item>Ointment</item>
        <item>Ear drops</item>
        <item>Eye drops</item>
        <item>Skin patch</item>
        <item>Suppository</item>
    </string-array>

</resources>